completed day14 for all funtion

--- a/www/templates/manage_blog_edit.html
+++ b/www/templates/manage_blog_edit.html
@@ -21,8 +21,8 @@ function initVM(blog) {
                         $form.showFormError(err);
                     }
                     else {
-                        return location.assign('/api/blogs/' + r.id);
-
+                        //return
+                         return location.assign('/manage/blogs');
                     }
                 });
             }
