--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -49,7 +49,7 @@
                         <div class="uk-dropdown uk-dropdown-navbar">
                             <ul class="uk-nav uk-nav-navbar">
                                 {% if __user__.admin %}
-                                <li><a href="/manage/blogs/create"><i class="uk-icon-edit"></i> 编辑日志</a></li>
+                                <li><a href="/manage/blogs/create"><i class="uk-icon-edit"></i>新日志</a></li>
                                 {% endif %}
                                 <li><a href="/signout"><i class="uk-icon-sign-out"></i> 登出</a></li>
                             </ul>
